<resources>
    <string name="app_name">Sales Manager</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <string name="client">Client</string>
    <string name="clients">Clients</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="notes">Notes</string>
    <string name="tin">Tax Identification Number</string>
    <string name="client_deleted">Client deleted</string>

    <string name="btn_save_client">Add Client</string>
    <string name="btn_add_new_client">Add New Client</string>

    <string name="product">Product</string>
    <string name="products">Products</string>

    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_color">Color</string>
    <string name="product_size">Size</string>
    <string name="product_material">Material</string>

    <string name="btn_save_product">Add Product</string>
    <string name="btn_add_new_product">Add New Product</string>

    <string name="sale">Sale</string>
    <string name="sales">Sales</string>
    <string name="btn_add_new_sale">Add new sale</string>


    <string name="select_product">Select a product</string>
    <string name="select_client">Select client</string>
    <string name="save_sale">Save sale</string>
    <string name="message_sale_product_fail">Error: Select at least one product</string>
    <string name="message_product_client_fail">Error: Select a client</string>
    <string name="sale_name">Sale Name</string>
    <string name="edit_product">Edit product</string>
    <string name="btn_update_product">Update product</string>
    <string name="date">Date</string>
    <string name="product_quantity">Quantity</string>
    <string name="stats">Stats</string>
    <string name="first_week">1st</string>
    <string name="second_week">2nd</string>
    <string name="third_week">3rd</string>
    <string name="fourth_week">4th</string>
    <string name="graph_title">Last month sales</string>

</resources>
