<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.glassy.salesmanager.AddClientActivity">
    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"/>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"/>
    <EditText
        android:id="@+id/et_tin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tin"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"/>
    </ScrollView>

    <Button
        android:id="@+id/btn_save_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_client"
        android:onClick="onClickbtnSaveClient"/>





</LinearLayout>
