<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.glassy.salesmanager.AddProductActivity">

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"/>

    <EditText
        android:id="@+id/et_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_price"/>

    <EditText
        android:id="@+id/et_product_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_color"/>

    <EditText
        android:id="@+id/et_product_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_size"/>
    <EditText
        android:id="@+id/et_product_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_material"/>

    <Button
        android:id="@+id/btn_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_new_product"
        android:onClick="onClickbtnAddNewProduct"/>



</LinearLayout>
