<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_screen"
    tools:context="com.glassy.salesmanager.Client.ReadClientActivity">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_name"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_account_circle"/>

            <TextView
                android:layout_weight=".50"
                android:textSize="@dimen/title_text"
                android:id="@+id/tv_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_address"
        android:layout_margin="@dimen/padding_screen"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_map"/>

        <TextView
            android:id="@+id/tv_address"
            android:textSize="@dimen/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"/>

    </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"/>
    <TextView
        android:id="@+id/tv_tin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tin"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/tv_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"/>
    </ScrollView>
    <Button
        android:id="@+id/btn_update_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit client"
        android:onClick="onClickbtnUpdateClient"/>
</LinearLayout>
