<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="com.glassy.salesmanager.MainActivity">

    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:onClick="onClickbtnClient"
            android:layout_weight=".5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clients" />

        <Button
            android:onClick="onClickbtnProduct"
            android:layout_weight=".5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/products" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >

        <Button
            android:onClick="onClickbtnSale"
            android:layout_weight=".5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sales" />

        <Button
            android:layout_weight=".5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="Button 2" />
    </LinearLayout>

</LinearLayout>
